--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,5 +1,5 @@
 FROM golang:1.13.15
-CMD echo "Hello go-sample! This is my first Docker image."
+CMD echo "Hello nichunhao! This is my first Docker image."
 RUN go get -v -u \
     github.com/mdempsky/gocode \
     github.com/uudashr/gopkgs/v2/cmd/gopkgs \
@@ -19,4 +19,3 @@ RUN go get -v -u \
     golang.org/x/tools/cmd/goimports \
     golang.org/x/lint/golint \
     golang.org/x/tools/gopls
-    
