--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,3 +1,4 @@
 FROM golang:1.13.15
-CMD echo "Hello nichunhao! This is my first Docker image."
-RUN go run main.go
+CMD echo "Hello a! This is my first Docker image."
+RUN go run ../main.go
+CMD echo "Hello b! This is my first Docker image."
